# LH_ED_Rafael07

./: .env.example  .gitignore  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  set_env.sh  test.py  test_conector.py
airflow/: airflow.cfg  airflow.db  pyproject.toml  set_air_env.sh  standalone_admin_password.txt
airflow/dags/: step1_dag.py  step2_dag.py
docs/: index.md
docs/project/: structure.md
meltano_dataloader/: final_query_orders_details.csv  hello.py  meltano.yml  pyproject.toml  set_env.sh
src/: check_path.py  final_query.py  meltano_script.py  pasth_test.py  set_env.sh  set_last_date.sh  test_conector.py
src/extract/: source_csv_extractor.py  source_db_extractor.py
src/extractors/: data_extractor.py  data_extractor_copy.py  data_extractor_copy2.py  data_extractor_copy3.py  test_conn.py  test_conn2.py
src/load/: target_db_loader.py
