[project]
name = "lh-ed-rafael07"
version = "0.1.0"
description = "Indicium Lighthouse Program - Data enginnering challenge"
authors = [
    {name = "Rafael Rodrigues",email = "rafaelrodriguesdsa@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8.10,<3.9"
dependencies = [
    "pandas (>=1.5.3)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "apache-airflow (>=2.10.4,<3.0.0)",
    "psycopg[binary] (>=3.2.4)",
    "pyarrow (==11.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
mkdocs-material = "^9.5.50"
